# nagtrix

./: .gitignore  README.md  pyproject.toml
src/nagtrix/: __init__.py  __main__.py  calls.py
tests/: cli.py
