[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nagtrix"
version = "0.0.1"
dependencies = [
    "requests",
    "requests_ntlm",
    "click",
    "pyodata",
]
authors = [
  { name="Andres Cubas", email="acubas@combinatronixlabs.org" },
]
description = "A package for displaying Citrix Monitoring API data on a Nagios server."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]